--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "formik": "^2.4.6",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
